NVIDIA Texture Tools version 2.0.2
 * Fix copy ctor error reported by Richard Sim.
 * Fix indexMirror error reported by Chris Lambert.
 * Fix vc8 post build command, reported by Richard Sim.
 * Fix RGBA modes with less than 32 bpp by Viktor Linder.
 * Fix alpha decompression by amorilia. See issue 40.
 * Add single color compresor for DXT1a.

NVIDIA Texture Tools version 2.0.1
 * Fix memory leaks.
 * Pre-allocate device memory for CUDA compressor.
 * Add single color compressor. Thanks to Amir Ebrahimi.
 * Better CUDA error checking.

NVIDIA Texture Tools version 2.0.0
 * Fixed PSNR formula in nvimgdiff.
 * Added support for arbitrary RGB formats.
 * Add support for DXT1a. Solves issue 1.
 * Refactor and improve compression quality of fast compressors.
 * Add cmake scripts to detect processor and chose compiler options.
 * Fix normal map decompression.
 * Evaluate angular deviation error for normal maps in nvimgdiff.
 * Fix DXT1 compression with custom color metrics.
 * Fix error in normal map generation from heightmap mipmaps.
 * Fix errors in estimateSize.
 * Fix errors when maxLevel is used.
 * Enable the use of BC5 not just for normal maps.
 * Add mirror wrapping mode, use by default.
 * Implement polyphase filters. Solves issue 3.
 * Add box and triangle filter sampling.
 * Refactor nvtt public interface.
 * Add resizing input options (setMaxExtents, setRoundMode). Solves issue 12.
 * Plain C and C# wrappers. Solves issue 22.

NVIDIA Texture Tools version 0.9.4
 * Added support for input DDS files, including cube maps.
 * Added support for input PSD files.
 * Added nvdecompress tool.
 * Added nvimgdiff tool.
 * Added nvddsinfo tool.
 * CUDA compressor 22% faster.
 * DXT3 & DXT5 CUDA compressors.
 * Faster DXT5n CPU compressor.
 * Many bug fixes.

NVIDIA Texture Tools version 0.9.3
 * Fix non power of two textures.
 * Fix estimateSize with rgb format.
 * Fix error in cuda compressor block limit.

NVIDIA Texture Tools version 0.9.2 