@@ -46,9 +46,9 @@ FIND_LIBRARY (CUDA_RUNTIME_LIBRARY
 	DOC "The CUDA runtime library")
 
 IF (CUDA_INCLUDE_PATH AND CUDA_RUNTIME_LIBRARY)
-	SET (CUDA_FOUND 1 CACHE STRING "Set to 1 if CUDA is found, 0 otherwise")
+	SET (CUDA_FOUND TRUE)
 ELSE (CUDA_INCLUDE_PATH AND CUDA_RUNTIME_LIBRARY)
-	SET (CUDA_FOUND 0 CACHE STRING "Set to 1 if CUDA is found, 0 otherwise")
+	SET (CUDA_FOUND FALSE)
 ENDIF (CUDA_INCLUDE_PATH AND CUDA_RUNTIME_LIBRARY)
 
 SET (CUDA_LIBRARIES ${CUDA_RUNTIME_LIBRARY})
