@@ -277,14 +277,6 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
-			<File
-				RelativePath="..\..\..\src\nvmath\Eigen.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\nvmath\Fitting.cpp"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -297,14 +289,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\nvmath\Color.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\nvmath\Eigen.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\nvmath\Fitting.h"
 				>
 			</File>
 			<File
