@@ -50,6 +50,7 @@ ENDIF(CG_FOUND)
 # CUDA
 INCLUDE(${NV_CMAKE_DIR}/FindCUDA.cmake)
 IF(CUDA_FOUND)
+	SET(HAVE_CUDA ${CUDA_FOUND} CACHE BOOL "Set to TRUE if CUDA is found, FALSE otherwise")
 	MESSAGE(STATUS "Looking for CUDA - found")
 ELSE(CUDA_FOUND)
 	MESSAGE(STATUS "Looking for CUDA - not found")
@@ -58,7 +59,7 @@ ENDIF(CUDA_FOUND)
 # Maya
 INCLUDE(${NV_CMAKE_DIR}/FindMaya.cmake)
 IF(MAYA_FOUND)
-	SET(HAVE_MAYA MAYA_FOUND)
+	SET(HAVE_MAYA ${MAYA_FOUND} CACHE BOOL "Set to TRUE if Maya is found, FALSE otherwise")
 	MESSAGE(STATUS "Looking for Maya - found")
 ELSE(MAYA_FOUND)
 	MESSAGE(STATUS "Looking for Maya - not found")
@@ -67,7 +68,7 @@ ENDIF(MAYA_FOUND)
 # JPEG
 INCLUDE(FindJPEG)
 IF(JPEG_FOUND)
-	SET(HAVE_JPEG JPEG_FOUND)
+	SET(HAVE_JPEG ${JPEG_FOUND} CACHE BOOL "Set to TRUE if JPEG is found, FALSE otherwise")
 	MESSAGE(STATUS "Looking for JPEG - found")
 ELSE(JPEG_FOUND)
 	MESSAGE(STATUS "Looking for JPEG - not found")
@@ -76,7 +77,7 @@ ENDIF(JPEG_FOUND)
 # PNG
 INCLUDE(FindPNG)
 IF(PNG_FOUND)
-	SET(HAVE_PNG PNG_FOUND)
+	SET(HAVE_PNG ${PNG_FOUND} CACHE BOOL "Set to TRUE if PNG is found, FALSE otherwise")
 	MESSAGE(STATUS "Looking for PNG - found")
 ELSE(PNG_FOUND)
 	MESSAGE(STATUS "Looking for PNG - not found")
@@ -85,7 +86,7 @@ ENDIF(PNG_FOUND)
 # TIFF
 INCLUDE(FindTIFF)
 IF(TIFF_FOUND)
-	SET(HAVE_TIFF TIFF_FOUND)
+	SET(HAVE_TIFF ${TIFF_FOUND} CACHE BOOL "Set to TRUE if TIFF is found, FALSE otherwise")
 	MESSAGE(STATUS "Looking for TIFF - found")
 ELSE(TIFF_FOUND)
 	MESSAGE(STATUS "Looking for TIFF - not found")
@@ -94,7 +95,7 @@ ENDIF(TIFF_FOUND)
 # OpenEXR
 INCLUDE(${NV_CMAKE_DIR}/FindOpenEXR.cmake)
 IF(OPENEXR_FOUND)
-	SET(HAVE_OPENEXR OPENEXR_FOUND)
+	SET(HAVE_OPENEXR ${OPENEXR_FOUND} CACHE BOOL "Set to TRUE if OpenEXR is found, FALSE otherwise")
 	MESSAGE(STATUS "Looking for OpenEXR - found")
 ELSE(OPENEXR_FOUND)
 	MESSAGE(STATUS "Looking for OpenEXR - not found")
