@@ -119,9 +119,12 @@ namespace nv
 		uint width() const;
 		uint height() const;
 		uint depth() const;
+		bool isTexture1D() const;
 		bool isTexture2D() const;
 		bool isTexture3D() const;
 		bool isTextureCube() const;
+
+		void setNormalFlag(bool b);
 		
 		void mipmap(Image * img, uint f, uint m);
 		//	void mipmap(FloatImage * img, uint f, uint m);
