@@ -3,7 +3,9 @@ NVIDIA Texture Tools version 2.0.2
  * Fix indexMirror error reported by Chris Lambert.
  * Fix vc8 post build command, reported by Richard Sim.
  * Fix RGBA modes with less than 32 bpp by Viktor Linder.
- * Fix alpha decompression by amorilia. See issue 40.
+ * Fix alpha decompression by Amorilia. See issue 40.
+ * Avoid default-initialized constructors for POD types, reported by Jim Tilander.
+ * Improved decompressor tool submitted by Amorilia. See issue 41.
  * Add single color compresor for DXT1a.
 
 NVIDIA Texture Tools version 2.0.1
